fix: issue of the download button not proper visible in the order confirmation screen fix from backend and also css given for the link

--- a/src/scss/pages/order-confirmation.scss
+++ b/src/scss/pages/order-confirmation.scss
@@ -30,6 +30,7 @@
         padding: 16px;
         border-radius: 15px;
         border: 1px solid rgba($dark, 0.1);
+
         .ThankyouWrapper {
             padding: 15px 10px 10px;
             background-color: rgba($blueCyan, 0.1);
@@ -56,15 +57,18 @@
                     font-size: 26px;
                     line-height: 34px;
                 }
-                h3{
+
+                h3 {
                     font-size: 24px;
                     line-height: 26px;
                     margin: 0;
                 }
-                h5{
+
+                h5 {
                     // margin-bottom: 10px;
                 }
-                p{
+
+                p {
                     font-size: 18px;
                     line-height: 22px;
                     margin: 0;
@@ -170,69 +174,86 @@
                     background-color: $white;
                     border-radius: 0 0 15px 15px;
                     border-bottom: none;
+
                     .ProductList {
                         display: grid;
                         grid-template-columns: repeat(1, 1fr);
                         gap: 20px;
                         margin-top: 20px;
+
                         @include media-between($md, $lg) {
-                          grid-template-columns: repeat(2, 1fr);
+                            grid-template-columns: repeat(2, 1fr);
                         }
-                      }
-                      .PricingDetails {
+                    }
+
+                    .PricingDetails {
                         width: 100%;
+
                         @include media($sm) {
-                          margin-top: 30px;
+                            margin-top: 30px;
                         }
+
                         .MuiDivider-root {
-                          border-color: rgba($dark, 0.1);
-                          @include margin-vertical(14);
+                            border-color: rgba($dark, 0.1);
+                            @include margin-vertical(14);
                         }
+
                         .PricingItem {
-                          justify-content: space-between;
-                          align-items: center;
-                          gap: 10px;
+                            justify-content: space-between;
+                            align-items: center;
+                            gap: 10px;
                         }
+
                         .TotalItem {
-                          margin-top: 30px;
-                          @include media($sm) {
-                            margin-top: 20px;
-                          }
-                        }
-                        .PaymentMethod {
-                          align-items: center;
-                          gap: 12px;
-                          padding: 12px;
-                          border-radius: 8px;
-                          border: 1px solid rgba($dark, 0.1);
-                          margin-top: 30px;
-                          @include media($sm) {
-                            margin-top: 20px;
-                          }
-                          .Message {
-                            color: rgba($dark, 0.6);
-                            .MuiTypography-root {
-                              color: $dark;
+                            margin-top: 30px;
+
+                            @include media($sm) {
+                                margin-top: 20px;
                             }
-                          }
                         }
+
+                        .PaymentMethod {
+                            align-items: center;
+                            gap: 12px;
+                            padding: 12px;
+                            border-radius: 8px;
+                            border: 1px solid rgba($dark, 0.1);
+                            margin-top: 30px;
+
+                            @include media($sm) {
+                                margin-top: 20px;
+                            }
+
+                            .Message {
+                                color: rgba($dark, 0.6);
+
+                                .MuiTypography-root {
+                                    color: $dark;
+                                }
+                            }
+                        }
+
                         .ActionDivider {
-                          margin: 30px -25px 0px;
-                          @include media($xs) {
-                            margin: 15px -15px 0px;
-                          }
+                            margin: 30px -25px 0px;
+
+                            @include media($xs) {
+                                margin: 15px -15px 0px;
+                            }
                         }
+
                         .ActionWrapper {
-                          justify-content: space-between;
-                          margin-top: 25px;
-                          .MuiButton-text {
-                            text-decoration: none;
-                          }
-                          .MuiButton-contained {
-                            @include padding-horizontal(24);
-                          }
+                            justify-content: space-between;
+                            margin-top: 25px;
+
+                            .MuiButton-text {
+                                text-decoration: none;
+                            }
+
+                            .MuiButton-contained {
+                                @include padding-horizontal(24);
+                            }
                         }
-                      }
+                    }
                 }
             }
         }
@@ -252,6 +273,21 @@
                 font-weight: 700;
                 color: $dark;
             }
+
+            .DownloadMessage {
+                a {
+                    font-size: 16px;
+                    line-height: 26px;
+                    font-weight: 700;
+                    @include transition;
+                    color: $yellowFuel;
+                    cursor: pointer;
+                    &:hover {
+                        text-decoration: underline;
+                    }
+                }
+
+            }
         }
 
 
@@ -259,6 +295,7 @@
 
     .ContinueBtn {
         margin-top: 30px;
+
         @include media-min($xxl) {
             min-width: 169px;
         }
